--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background-image: url('halloween-dark.jpg'); */
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(50px + 2vmin);
+  color: #FF9100;
+  font-family: 'Creepster', cursive;
+  margin-bottom: 0.5em;
+  margin-top:1em;
 }
 
 .App-link {
@@ -29,4 +27,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.movieListRow {
+  display: flex;
+}
+
+.movieListRow ul {
+  list-style-type: none;
+  font-size: 1.5em;
+  color: white;
 }
