--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+
 }
 
 .App-header {
@@ -11,7 +11,7 @@
   justify-content: center;
   font-size: calc(50px + 2vmin);
   color: #FF9100;
-  font-family: 'Creepster', cursive;
+  font-family: 'Sigmar One', cursive;
   margin-bottom: 0.5em;
   margin-top:1em;
 }
@@ -29,12 +29,23 @@
   }
 }
 
-.movieListRow {
+.movieList {
+  padding-top: 10px;
+  padding-bottom: 10px;
   display: flex;
+  flex-wrap: wrap;
+  padding-left: 15px;
 }
 
-.movieListRow ul {
+.movieList ul {
   list-style-type: none;
-  font-size: 1.5em;
+  font-size: .9em;
+  font-family: 'Kodchasan', sans-serif;
   color: white;
+  margin-left:5px;
+  padding-left:5px;
+}
+
+.movieList ul li {
+   width: 20em;
 }
