--- a/src/App.css
+++ b/src/App.css
@@ -30,22 +30,33 @@
 }
 
 .movieList {
-  padding-top: 10px;
-  padding-bottom: 10px;
   display: flex;
   flex-wrap: wrap;
   padding-left: 15px;
 }
 
-.movieList ul {
+
+.movieList ul li {
+   width: 20em;
+   padding-top: 10px;
+}
+
+.movie {
+  margin: 10px;
+}
+.movie img {
+  float:left;
+  padding-top: 0;
+
+}
+
+.movie ul {
+  float: right;
+  margin-top: 0;
   list-style-type: none;
   font-size: .9em;
   font-family: 'Kodchasan', sans-serif;
   color: white;
   margin-left:5px;
   padding-left:5px;
-}
-
-.movieList ul li {
-   width: 20em;
 }
