add rating, truncate overview

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(50px + 2vmin);
-  color: #FF9100;
+  color: #C99F3A;
   font-family: 'Sigmar One', cursive;
   margin-bottom: 0.5em;
   margin-top:1em;
